# capstone-project

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  manage.py  profile.out  pyproject.toml  pytest.ini
.github/workflows/: main.yml
api/: permissions.py  serializers.py  urls.py  views.py
backend/: README.md  example.py
comments/: admin.py  models.py  serializers.py  urls.py  views.py
comments/migrations/: 0001_initial.py
docs/: development-log.md
docs/adr/: 0001-use-nodejs-for-real-time-notifications.md
exercises/day4/: NOTES.md  dip_after.py  dip_before.py  dry_after.py  dry_before.py  isp_after.py  isp_before.py  lsp_after.py  lsp_before.py  ocp_after.py  ocp_before.py  srp_after.py  srp_before.py
projects/: admin.py  models.py  serializers.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_alter_project_slug.py
realtime-service/: .dockerignore  Dockerfile  client.html  package-lock.json  package.json  server.js
realtime-service/.clinic/: 75922.clinic-doctor.html  77477.clinic-doctor.html  80894.clinic-doctor.html  82396.clinic-doctor.html  83233.clinic-doctor.html
realtime-service/__tests__/: messageProcessor.test.js
realtime-service/src/: messageProcessor.js
scripts/: raw_sql_check.py
src/: utils.py
tasks/: admin.py  models.py  realtime.py  serializers.py  urls.py  views.py
tasks/migrations/: 0001_initial.py
tests/: conftest.py  test_slugify.py
tests/tasks/: test_task_realtime.py
tutorial/: asgi.py  settings.py  urls.py  wsgi.py
(+15 files in other folders)
