[tool.poetry]
name = "capstone-project"
version = "0.1.0"
description = ""
authors = ["yash-solanki09442 <yashsolanki09442@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
django = ">=5.2,<6.0"
djangorestframework = "^3.16.1"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
